force-app/main/default/objects/Insurance__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Agent field represents the insurance representative or broker responsible for managing and assisting with the Insurance policy. This field links the insurance record to the assigned agent, who handles policy setup, renewals, claims, and customer support.</description>
    <inlineHelpText>👤 Select the insurance agent responsible for this policy. The agent assists with enrollment, policy management, and customer support.</inlineHelpText>
    <label>Agent</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>🚨 Validation Error: The selected Agent must be a Person Account with the Agent record type. Please choose a valid Agent (Person Account) for this Insurance policy.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agent</value>
        </filterItems>
        <infoMessage>Only Company with the record type “Agent” are available for selection.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance (Agent)</relationshipLabel>
    <relationshipName>Agent_Insurances</relationshipName>
    <type>Lookup</type>
</CustomField>