force-app/main/default/objects/Insurance__c/fields/Building_Coverage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Building_Coverage_Limit__c</fullName>
    <description>Specifies the maximum dollar amount covered by this insurance policy for building-related damages or losses.</description>
    <inlineHelpText>Enter the coverage limit (in dollars) for the insured building under this policy. This represents the maximum reimbursement the insurer will provide for building-related claims.</inlineHelpText>
    <label>Building Coverage Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>