force-app/main/default/objects/Insurance__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>Explains why the insurance policy was cancelled before its scheduled end date.</description>
    <inlineHelpText>Provide a clear reason for the policy cancellation. This helps track trends, improve customer service, and support compliance or auditing.</inlineHelpText>
    <label>Cancellation Reason</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>