force-app/main/default/objects/Insurance__c/fields/COI__c.field-meta.xml
<CustomField>
    <fullName>COI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores the Certificate of Insurance (COI) related to the insurance policy.</description>
    <inlineHelpText>Upload or reference the Certificate of Insurance (COI) that provides proof of the policy’s coverage. This document may be required for compliance, verification, or third-party review.</inlineHelpText>
    <label>COI</label>
    <type>Checkbox</type>
</CustomField>