force-app/main/default/objects/Insurance__c/fields/COI_Details__c.field-meta.xml
<CustomField>
    <fullName>COI_Details__c</fullName>
    <description>Provides additional details related to the Certificate of Insurance (COI).</description>
    <inlineHelpText>Enter any relevant notes or information about the Certificate of Insurance (COI), such as coverage limits, effective dates, named insureds, or special endorsements. This field helps ensure complete documentation and easy reference.</inlineHelpText>
    <label>COI Details</label>
    <type>TextArea</type>
</CustomField>