force-app/main/default/objects/Insurance__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the company (Account) that holds or owns this insurance policy.</description>
    <inlineHelpText>This field links the insurance record to the company (Account) that owns the policy. Select the appropriate company that is the primary holder or beneficiary of this insurance.</inlineHelpText>
    <label>Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance (Company)</relationshipLabel>
    <relationshipName>Insurance</relationshipName>
    <type>Lookup</type>
</CustomField>