force-app/main/default/objects/Insurance__c/fields/Dental_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Dental_Plan_Name__c</fullName>
    <description>Captures the name of the dental insurance plan associated with this insurance record.</description>
    <inlineHelpText>Enter the full name of the dental insurance plan (e.g., Delta Dental Premier, Cigna Dental 1500, etc.).
This helps clearly identify the specific dental coverage tied to this policy, especially when multiple plans or carriers are involved.</inlineHelpText>
    <label>Dental Plan Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>