force-app/main/default/objects/Insurance__c/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <description>Captures the justification for disqualifying an insurance application or quote.</description>
    <inlineHelpText>Enter the reason this insurance policy was disqualified. This information is important for reporting, feedback, and future qualification analysis.</inlineHelpText>
    <label>Disqualified Reason</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>