force-app/main/default/objects/Insurance__c/fields/EOI__c.field-meta.xml
<CustomField>
    <fullName>EOI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Evidence of Insurability (EOI) is required or has been submitted for the insurance policy.</description>
    <inlineHelpText>Evidence of Insurability (EOI) is documentation of an individual’s health status, typically required for certain coverage levels. Use this field to track whether EOI is needed or has been received for the insured party.</inlineHelpText>
    <label>EOI</label>
    <type>Checkbox</type>
</CustomField>