force-app/main/default/objects/Insurance__c/fields/EOI_Details__c.field-meta.xml
<CustomField>
    <fullName>EOI_Details__c</fullName>
    <description>Stores additional information related to the Evidence of Insurability (EOI) for this insurance policy.</description>
    <inlineHelpText>Enter detailed notes regarding the Evidence of Insurability (EOI), including submission dates, medical documentation, approval status, or any follow-up requirements. This helps track the EOI process and ensure compliance for coverage eligibility.</inlineHelpText>
    <label>EOI Details</label>
    <type>TextArea</type>
</CustomField>