force-app/main/default/objects/Insurance__c/fields/HSA__c.field-meta.xml
<CustomField>
    <fullName>HSA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this insurance policy includes or is eligible for a Health Savings Account (HSA).</description>
    <inlineHelpText>Check this box if the insurance plan is HSA-eligible or includes a Health Savings Account (HSA) option.
HSA-eligible plans are typically high-deductible health plans (HDHPs) that allow the insured to contribute pre-tax funds to an HSA for qualifying medical expenses.</inlineHelpText>
    <label>HSA</label>
    <type>Checkbox</type>
</CustomField>