force-app/main/default/objects/Insurance__c/fields/Important_Note__c.field-meta.xml
<CustomField>
    <fullName>Important_Note__c</fullName>
    <description>Stores important notes or critical information related to the insurance policy.</description>
    <inlineHelpText>Enter any key details, special considerations, or important notes about this policy. This information will be visible to users for reference and follow-up.</inlineHelpText>
    <label>Important Note</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>