force-app/main/default/objects/Insurance__c/fields/Insurance_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_End_Date__c</fullName>
    <description>Automatically calculates the date when the insurance policy coverage ends based on the start date and contract term.</description>
    <formula>IF(
  AND(
    NOT(ISBLANK( Insurance_Start_Date__c )),
    NOT(ISBLANK(Insurance_Term_months__c))
  ),
  ADDMONTHS(Insurance_Start_Date__c, Insurance_Term_months__c),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This date is derived from the Insurance Start Date and Contract Term (Months). It represents the final day the insurance policy remains valid.</inlineHelpText>
    <label>Insurance End Date</label>
    <type>Date</type>
</CustomField>