force-app/main/default/objects/Insurance__c/fields/Insurance_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Start_Date__c</fullName>
    <description>Indicates the date when the insurance coverage begins.</description>
    <inlineHelpText>Enter the official start date of the insurance policy. Coverage and benefits become effective on this date.</inlineHelpText>
    <label>Insurance Start Date</label>
    <type>Date</type>
</CustomField>