force-app/main/default/objects/Insurance__c/fields/Insurance_Term_months__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Term_months__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Specifies the duration of the insurance contract in months.</description>
    <inlineHelpText>Enter the total number of months the insurance policy will remain active. This defines the length of the contract from the start date to its expiration.</inlineHelpText>
    <label>Insurance Term (months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>