force-app/main/default/objects/Insurance__c/fields/Medicaid__c.field-meta.xml
<CustomField>
    <fullName>Medicaid__c</fullName>
    <description>Specifies the type of Medicaid coverage associated with this insurance policy.</description>
    <inlineHelpText>Select the applicable Medicaid category for this insurance policy:
 • MQMB (Medicare Qualified Medicare Beneficiary)
 • QMB (Qualified Medicare Beneficiary)
 • SLMB (Specified Low-Income Medicare Beneficiary)
 • QI (Qualifying Individual)
Choose the appropriate Medicaid classification to ensure accurate tracking of coverage and eligibility.</inlineHelpText>
    <label>Medicaid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MQMB</fullName>
            </value>
            <value>
                <fullName>QMB</fullName>
            </value>
            <value>
                <fullName>SLMB</fullName>
            </value>
            <value>
                <fullName>QI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>