force-app/main/default/objects/Insurance__c/fields/Medical_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Medical_Plan_Name__c</fullName>
    <description>Specifies the name of the medical insurance plan associated with this policy.</description>
    <inlineHelpText>Enter the official name of the medical insurance plan (e.g., Blue Cross Blue Shield Medicare Advantage, UnitedHealthcare Dual Complete, etc.).
This field helps identify and differentiate plans when multiple policies are managed under a single carrier or provider.</inlineHelpText>
    <label>Medical Plan Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>