force-app/main/default/objects/Insurance__c/fields/On_Off_Market__c.field-meta.xml
<CustomField>
    <fullName>On_Off_Market__c</fullName>
    <description>Identifies whether the insurance contract is available through a public marketplace (on-market) or sold directly/off-market.</description>
    <inlineHelpText>Identifies whether the insurance contract is available through a public marketplace (on-market) or sold directly/off-market.</inlineHelpText>
    <label>On/Off Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Market</fullName>
            </value>
            <value>
                <fullName>Off Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>