force-app/main/default/objects/Insurance__c/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <description>Indicates how the premium for this insurance policy is scheduled to be paid.</description>
    <inlineHelpText>Select the payment frequency agreed upon for this policy—such as Full, Partial, Monthly, Quarterly, or Annually. This helps track billing schedules and ensures accurate financial processing.</inlineHelpText>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
                <default>true</default>
                <label>Full</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Full(Auto Renewal)</fullName>
            </value>
            <value>
                <fullName>Monthly(Auto Renewal)</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Quarterly(Auto Renewal)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>