force-app/main/default/objects/Insurance__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Specifies the method used to pay the insurance premium.</description>
    <inlineHelpText>Select the payment method used for this insurance policy, such as credit card, check, or debit card. This helps ensure accurate tracking of how premiums are collected and supports financial reconciliation.</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Escrow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>