force-app/main/default/objects/Insurance__c/fields/Policy_Holder__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Identifies the individual or organization that owns and is primarily responsible for the insurance policy.</description>
    <inlineHelpText>Select the person or company who holds this insurance policy. The policy holder is typically the insured party and may be responsible for premium payments and coverage decisions.</inlineHelpText>
    <label>Policy Holder</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Insurances</relationshipLabel>
    <relationshipName>Insurance</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>