force-app/main/default/objects/Insurance__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <description>Specifies the subcategory of the insurance plan, such as market classification, plan type, or brand.</description>
    <inlineHelpText>Select the appropriate subtype for the insurance policy</inlineHelpText>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On market</fullName>
            </value>
            <value>
                <fullName>Off Market</fullName>
            </value>
            <value>
                <fullName>G01</fullName>
            </value>
            <value>
                <fullName>G02</fullName>
            </value>
            <value>
                <fullName>F01</fullName>
            </value>
            <value>
                <fullName>F02</fullName>
            </value>
            <value>
                <fullName>T-IRA</fullName>
            </value>
            <value>
                <fullName>R-IRA</fullName>
            </value>
            <value>
                <fullName>Non Qualified</fullName>
            </value>
            <value>
                <fullName>H0609 061</fullName>
            </value>
            <value>
                <fullName>H0609 062</fullName>
            </value>
            <value>
                <fullName>H0609 052</fullName>
            </value>
            <value>
                <fullName>H1278 003</fullName>
            </value>
            <value>
                <fullName>H1889 014</fullName>
            </value>
            <value>
                <fullName>H4514 021</fullName>
            </value>
            <value>
                <fullName>S5921 403</fullName>
            </value>
            <value>
                <fullName>H1278 013</fullName>
            </value>
            <value>
                <fullName>Giveback</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>H0609 060</fullName>
            </value>
            <value>
                <fullName>H0609 051</fullName>
            </value>
            <value>
                <fullName>H4527 002</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>