force-app/main/default/objects/Insurance__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Specifies the category of the insurance contract based on its duration and coverage scope.</description>
    <inlineHelpText>Specifies the category of the insurance contract based on its duration and coverage scope.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annuity</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Cancer Insurnace</fullName>
            </value>
            <value>
                <fullName>Commecial Auto</fullName>
            </value>
            <value>
                <fullName>Condo</fullName>
            </value>
            <value>
                <fullName>CSNP</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>DSNP w MQMB</fullName>
            </value>
            <value>
                <fullName>DSNP w QMB</fullName>
            </value>
            <value>
                <fullName>E&amp;O</fullName>
            </value>
            <value>
                <fullName>Fully</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Home DP3</fullName>
            </value>
            <value>
                <fullName>Home HO3</fullName>
            </value>
            <value>
                <fullName>Indexed Universal Life</fullName>
            </value>
            <value>
                <fullName>Ind Health</fullName>
            </value>
            <value>
                <fullName>Leveled</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>LTC</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>Med Supp</fullName>
            </value>
            <value>
                <fullName>PDP</fullName>
            </value>
            <value>
                <fullName>PPO</fullName>
            </value>
            <value>
                <fullName>Renters</fullName>
            </value>
            <value>
                <fullName>R-MAPD</fullName>
            </value>
            <value>
                <fullName>Short Term</fullName>
            </value>
            <value>
                <fullName>Term Life</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>