force-app/main/default/objects/Insurance__c/fields/Vision_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Vision_Plan_Name__c</fullName>
    <description>Stores the name of the vision insurance plan associated with this insurance record.</description>
    <inlineHelpText>Enter the official name of the vision insurance plan (e.g., VSP Choice Plan, EyeMed Access, etc.).
This field helps track specific vision coverage details, especially when clients have multiple types of insurance under different providers.</inlineHelpText>
    <label>Vision Plan Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>