force-app/main/default/objects/Insurance__c/fields/With_Dental__c.field-meta.xml
<CustomField>
    <fullName>With_Dental__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the insurance policy includes dental coverage.</description>
    <inlineHelpText>Select this checkbox if the policy includes dental benefits in addition to the primary coverage.</inlineHelpText>
    <label>With Dental?</label>
    <type>Checkbox</type>
</CustomField>