force-app/main/default/objects/Insurance__c/fields/With_Vision__c.field-meta.xml
<CustomField>
    <fullName>With_Vision__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the insurance policy includes vision coverage.</description>
    <inlineHelpText>Select this checkbox if the policy includes vision benefits in addition to the primary coverage.</inlineHelpText>
    <label>With Vision?</label>
    <type>Checkbox</type>
</CustomField>