force-app/main/default/objects/Insurance__c/recordTypes/Health_Insurance.recordType-meta.xml
<RecordType>
    <fullName>Health_Insurance</fullName>
    <active>true</active>
    <description>Health Insurance provides coverage for medical expenses, including doctor visits, hospital stays, prescriptions, and preventive care. This record type helps manage health policies, benefits, and provider details.</description>
    <label>Health</label>
</RecordType>