force-app/main/default/objects/Insurance__c/validationRules/Require_Cancellation_Reason_When_Cancell.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Cancellation_Reason_When_Cancell</fullName>
    <active>true</active>
    <description>Prevents saving the insurance record with a status of “Cancelled” unless a cancellation reason is provided. This ensures proper documentation for policy termination.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Cancelled&quot;),
				LEN(Cancellation_Reason__c) = 0
)</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Cancellation Reason is required when the status is set to “Cancelled”.</errorMessage>
</ValidationRule>