force-app/main/default/objects/Insurance__c/validationRules/Require_Disqualified_Reason_When_Disqual.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Disqualified_Reason_When_Disqual</fullName>
    <active>true</active>
    <description>Prevents saving the insurance record with a status of “Disqualified” unless a disqualified reason is provided. This ensures consistent tracking and documentation of disqualified policies.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Disqualified&quot;),
    LEN(Disqualified_Reason__c) = 0
)</errorConditionFormula>
    <errorDisplayField>Disqualified_Reason__c</errorDisplayField>
    <errorMessage>Disqualified Reason is required when the status is set to “Disqualified”.</errorMessage>
</ValidationRule>